@@ -1,6 +1,8 @@
 Copyright (C) 2022-2023 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_032023_4 - Gateway now converted from threading to asyncio.
+
 saw_032023_3 - Node client properly plays ping-pong again.
 
 saw_032023_2 - Flush output while printing by default. Handle incomplete reads.
